Adjusted font size and top % on CV download text to avoid it covering the download button

--- a/src/Views/Home/home.scss
+++ b/src/Views/Home/home.scss
@@ -351,7 +351,7 @@
   font-size: 2rem;
 
   position: absolute;
-  top: 13%;
+  top: 7%;
   left: 0;
   margin: 3.8rem;
 }
@@ -746,7 +746,8 @@
   }
 
   .cartoon-browser-text {
-    font-size: 3rem;
+    top: 13%;
+    font-size: 2.6rem;
   }
 
   .download-cv-button {
